// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
}

.c1:focus-within {
  border-color: #00478A;
}

.c1:hover {
  border-color: #00478A;
}

.c4 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c4:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box c0 poodle-select c1 c2"
>
  <select
    class="poodle-box c0 poodle-select__native c4 c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c7 c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
}

.c1:focus-within {
  border-color: #00478A;
}

.c1:hover {
  border-color: #00478A;
}

.c2 {
  margin-top: 20px;
}

.c4 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c4:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box c0 poodle-select c1 c2"
  id="id"
>
  <select
    aria-label="name"
    class="poodle-box c0 poodle-select__native c4 c5"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c7 c5"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> should render Select correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
}

.c1:focus-within {
  border-color: #00478A;
}

.c1:hover {
  border-color: #00478A;
}

.c4 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c4:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box c0 poodle-select c1 c2"
>
  <select
    class="poodle-box c0 poodle-select__native c4 c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c7 c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> should render Select with adornment correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
  border-color: #AF1308;
}

.c1:focus-within {
  border-color: #00478A;
}

.c1:hover {
  border-color: #00478A;
}

.c1:focus-within {
  border-color: #AF1308;
}

.c1:hover {
  border-color: #AF1308;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-left: 8px;
}

.c7 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c7:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1px;
  height: 1rem;
  background-color: #CCCCCC;
  margin-right: 8px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-right: 8px;
  font-size: 1.5rem;
}

.c17 {
  color: #AF1308;
}

<div
  class="poodle-box c0 poodle-select c1 c2"
>
  <div
    class="poodle-box c0 poodle-input-adornment c4 c2"
  >
    $
  </div>
  <select
    aria-invalid="true"
    class="poodle-box c0 poodle-select__native c7 c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c10 c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
  <div
    class="poodle-box c0 poodle-select__divider c13 c2"
  />
  <div
    class="poodle-box c0 poodle-input-adornment c16 c17"
  >
    end
  </div>
</div>
`;

exports[`<Select /> should render Select with error correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
  border-color: #AF1308;
}

.c1:focus-within {
  border-color: #00478A;
}

.c1:hover {
  border-color: #00478A;
}

.c1:focus-within {
  border-color: #AF1308;
}

.c1:hover {
  border-color: #AF1308;
}

.c4 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c4:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box c0 poodle-select c1 c2"
>
  <select
    aria-invalid="true"
    class="poodle-box c0 poodle-select__native c4 c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c7 c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<div
  class="poodle-box c0 poodle-select c1"
>
  <select
    class="poodle-box c0 poodle-select__native c1"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c1"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c1:focus-within {
  border-color: #00478A;
}

.c1:hover {
  border-color: #00478A;
}

.c4 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  margin-top: 13px;
  letter-spacing: 251px;
  top: 2px;
  text-indent: 3px;
}

.c4:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
  margin-top: 11px;
  letter-spacing: 251px;
  top: 1px;
  text-indent: 2px;
}

<div
  class="poodle-box c0 poodle-select c1 c2"
>
  <select
    class="poodle-box c0 poodle-select__native c4 c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c7 c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c1:focus-within {
  border-color: #00478A;
}

.c1:hover {
  border-color: #00478A;
}

.c4 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  margin-top: 13px;
  letter-spacing: 251px;
  top: 2px;
  text-indent: 3px;
}

.c4:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
  margin-top: 11px;
  letter-spacing: 251px;
  top: 1px;
  text-indent: 2px;
}

<div
  class="poodle-box c0 poodle-select c1 c2"
>
  <select
    class="poodle-box c0 poodle-select__native c4 c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c7 c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<div
  class="poodle-box c0 poodle-select morning c1"
>
  <select
    class="poodle-box c0 poodle-select__native native c1"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon icon c1"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 51px;
}

.c4 {
  margin-top: 54px;
}

.c7 {
  margin-top: 53px;
}

<div
  class="poodle-box c0 poodle-select c1 c2"
>
  <select
    class="poodle-box c0 poodle-select__native c4 c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c7 c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
}

.c1:focus-within {
  border-color: #00478A;
}

.c1:hover {
  border-color: #00478A;
}

.c4 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c4:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box c0 poodle-select c1 hello c2"
  id="id"
>
  <select
    class="poodle-box c0 poodle-select__native c4 c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box c0 poodle-select__icon c7 c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;
